[package]
name = "rustlibs"
build = "build.rs"
version = "0.1.0"
authors = ["Samuel Mendoza-Jonas <sam@mendozajonas.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
libc = "0.2"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
libtool = "0.1"

[profile.release]
lto = true
